デプロイ設定

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,15 +10,15 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
+  adapter: mysql2
+  usename: root
+  password:
+  host: localhost
   database: furima_39678_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,6 +26,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: root
+  password:
+  host: localhost
   database: furima_39678_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -50,6 +53,5 @@ test:
 #
 production:
   <<: *default
-  database: furima_39678_production
-  username: furima_39678
+  adapter: postgresql
   password: <%= ENV["FURIMA_39678_DATABASE_PASSWORD"] %>
