--- a/config/database.yml
+++ b/config/database.yml
@@ -20,5 +20,8 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
-  password: <%= ENV["FURIMA_39678_DATABASE_PASSWORD"] %>
+  adapter: mysql2
+  database: furima-39678_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
